# fsmtrie

./: .gitignore  COPYRIGHT  Makefile.am  README.md  configure.ac
debian/: changelog  control  copyright  gbp.conf  libfsmtrie-dev.install  libfsmtrie1.install  libfsmtrie1.symbols  libfsmtrie2.symbols  libfsmtrie3.install  libfsmtrie3.symbols  rules
doc/doxygen/: Doxyfile.in
examples/: ascii.c  eascii.c  print_version.c  token.c
fsmtrie/: asearch.c  fsmtrie.c  fsmtrie.h  libfsmtrie.pc.in  private.c  private.h  subsearch.c  version.c  version.h.in
tests/: examples.ascii.cmp  examples.eascii.cmp  examples.token.cmp  run_examples_tests.sh.in  test-trie-insert-and-asearch-subsearch.c  test-trie-insert-and-search.c
